--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -379,7 +379,7 @@
 </div>
   <table border=1>
     <tr>
-      <td>Center Name</td>
+      <td>Branch Name</td>
       <td>Address</td>
       <td>State</td>
       <td>date</td>
